# alphazero-pawnrace

./: .gitignore  README.md  setup.cfg
chess/: game.py  main.py  move.py  players.py
