[metadata]
name = alphazero-pawnrace
version = 1.0.0
author = Aahil Mehta

classifiers =
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = .

[options.extras_require]
dev =
    pre-commit

[flake8]
max-line-length = 120
extend-ignore = E203, W503

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120
